# ComfyUI-OldTimeRadio

./: .gitattributes  .gitignore  ALPHA2_QA_REPORT.md  ANIMATION_UPGRADE_PLAN.md  ANTIGRAVITY_PROMPT.md  BUG_FIX_GUIDE_v1.2.md  BUG_LOG.md  CLAUDE.md  CLAUDE_v1.3_LOCKED.md  COLLECTIVE_CONSCIOUSNESS.md  FAILED_SCRIPT_DUMP.txt  GEMINI.md  GEMINI_RNG_AUDIT.md  KICKOFF_v1.2.md  LEMMY_QA_GUIDE.md  LICENSE  Live_Telemetry.bat  OTR_TECH_BRIEF.md  PEER_REVIEW_REQUEST_v1.2_beta.md  QA_GUIDE_v1.4.md  QA_PEER_REVIEW_GUIDE.md  README.md  README_v2.0_ALPHA.md  ROADMAP.md  SESSION_BUGS.yaml  SIGNAL_LOST_v1.0_Briefing.md  SIGNAL_LOST_v1.1_Ear_Pleasing_Tech_Guide.md  SIGNAL_LOST_v1.1_QA_Tech_Brief.md  V1.3_OOM_EMERGENCY.md  V2_BUILD_ORDER.md  V2_OPEN_QUESTIONS.md  VRAM_QA.md  __init__.py  alpha2_progress.md  otr_dashboard.json  otr_monitor.py  prestartup_script.py  pyproject.toml  requirements.txt  requirements.video.txt  (+2 more)
config/: episode_cast.txt  rtx5080.yaml
docs/: 2026-04-14-green-zone-guardrail-decision.md  2026-04-14-otr-v2.1-spec.md  2026-04-15-hyworld-integration-plan-review.md  2026-04-15-hyworld-poc-design.md  2026-04-15-otr-to-hyworld-narrative-mapping.md  2026-04-15-soak-lessons-roundrobin.md  2026-04-16-chatgpt__00_context_bundle.md  2026-04-16-chatgpt__01_round1_robustness.md  2026-04-16-chatgpt__03_round3_plan.md  2026-04-16-chatgpt__transcript.json  2026-04-16-hyworld-v2-next-phase.md  2026-04-16-phase-b-anchor-pick__01_chatgpt.md  2026-04-16-phase-b-anchor-pick__03_synthesis.md  2026-04-16-phase-c-splat-stack__01_chatgpt.md  2026-04-16-phase-c-splat-stack__02_gemini.md  (+28 more)
(+243 files in other folders)
